--- a/ups/CMakeLists.txt
+++ b/ups/CMakeLists.txt
@@ -1,3 +1,6 @@
+if (ALT_CMAKE) 
+include(altCMakeLists.cmake)
+else()
 # ======================================================================
 #
 # generate/install ups boilerplate
@@ -8,3 +11,4 @@
 process_ups_files()
 
 cet_cmake_config()
+endif()
