--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,6 @@
+if (ALT_CMAKE) 
+include(altCMakeLists.cmake)
+else()
 # ======================================================================
 #  cpp0x main build file
 #
@@ -60,3 +63,4 @@ include(UseCPack)
 
 #
 # ======================================================================
+endif()
