--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,6 @@
+if (ALT_CMAKE) 
+include(altCMakeLists.cmake)
+else()
 # ======================================================================
 #
 # Testing script
@@ -35,3 +38,4 @@ cet_test(poisson_sampling   USE_BOOST_UNIT
 cet_test(normal_sampling    USE_BOOST_UNIT
   OPTIONAL_GROUPS LONG RELEASE
   )
+endif()
